[gd_scene load_steps=8 format=3 uid="uid://cq77ll7jick0i"]

[ext_resource type="Script" path="res://scenes/ui/ability_upgrade_card/ability_upgrade_card.gd" id="1_8vlvp"]
[ext_resource type="Shader" path="res://scenes/ui/ability_upgrade_card/fake_3d.gdshader" id="1_w6daq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lrwwh"]
resource_local_to_scene = true
shader = ExtResource("1_w6daq")
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[sub_resource type="Animation" id="Animation_m7nns"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_teeio"]
resource_name = "discard"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_j7iuf"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5c5g2"]
_data = {
"RESET": SubResource("Animation_m7nns"),
"discard": SubResource("Animation_teeio"),
"selected": SubResource("Animation_j7iuf")
}

[node name="AbilityUpgradeCard" type="SubViewportContainer" groups=["upgrade_card"]]
material = SubResource("ShaderMaterial_lrwwh")
custom_minimum_size = Vector2(144, 201.6)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -100.8
offset_right = 72.0
offset_bottom = 100.8
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(72, 100.8)
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
script = ExtResource("1_8vlvp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5c5g2")
}

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(144, 201)
render_target_update_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="SubViewport"]
custom_minimum_size = Vector2(144, 201.6)
offset_right = 8.0
offset_bottom = 23.0

[node name="MarginContainer" type="MarginContainer" parent="SubViewport/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "Test Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="DescriptionLabel" type="Label" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 10
text = "<Write some description here>"
autowrap_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="SubViewport/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="QuantityLabel" type="Label" parent="SubViewport/PanelContainer/MarginContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.14902, 0.168627, 0.266667, 1)
text = "0/10"
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
